@@ -47,6 +47,20 @@ function suite(name: string, define: () => void): void {
 
 const makeTempDir = () => fs.mkdtempSync(path.join(os.tmpdir(), "weftend-host-update-"));
 
+const copyDir = (src: string, dst: string): void => {
+  if (typeof fs.cpSync === "function") {
+    fs.cpSync(src, dst, { recursive: true });
+    return;
+  }
+  fs.mkdirSync(dst, { recursive: true });
+  for (const entry of fs.readdirSync(src, { withFileTypes: true })) {
+    const from = path.join(src, entry.name);
+    const to = path.join(dst, entry.name);
+    if (entry.isDirectory()) copyDir(from, to);
+    else fs.copyFileSync(from, to);
+  }
+};
+
 suite("runtime/host update cli", () => {
   register("host install + status works", async () => {
     const hostRoot = makeTempDir();
@@ -104,6 +118,41 @@ suite("runtime/host update cli", () => {
 
     const privacy = runPrivacyLintV0({ root: outDir });
     assertEq(privacy.report.verdict, "PASS", "expected privacy lint pass");
+  });
+
+  register("host install fails closed when out overlaps release dir", async () => {
+    const hostRoot = makeTempDir();
+    const trustRootPath = path.join(hostRoot, "trust_root.json");
+    const keyId = "host-demo-key";
+    const secret = "host-update-demo";
+    const publicKey = deriveDemoPublicKey(secret);
+    fs.writeFileSync(trustRootPath, JSON.stringify({ keyId, publicKey }), "utf8");
+    const tmp = makeTempDir();
+    const releaseDir = path.join(tmp, "release_demo_js");
+    copyDir(path.join(process.cwd(), "tests", "fixtures", "release_demo_js"), releaseDir);
+    const outDir = path.join(releaseDir, "receipts");
+
+    const env = { WEFTEND_HOST_ROOT: hostRoot, WEFTEND_HOST_TRUST_ROOT: trustRootPath, WEFTEND_HOST_OUT_ROOT: outDir };
+    const install = await runCliCapture(
+      [
+        "host",
+        "install",
+        releaseDir,
+        "--root",
+        hostRoot,
+        "--trust-root",
+        trustRootPath,
+        "--out",
+        outDir,
+        "--signing-secret",
+        secret,
+      ],
+      { env }
+    );
+    assertEq(install.status, 40, `expected fail-closed exit code\n${install.stderr}`);
+    assert(install.stderr.includes("HOST_OUT_CONFLICTS_RELEASE_DIR"), "expected host out/release conflict code");
+    assert(!fs.existsSync(path.join(outDir, "host_update_receipt.json")), "must not write host update receipt into release dir");
+    assert(!fs.existsSync(path.join(outDir, "operator_receipt.json")), "must not write operator receipt into release dir");
   });
 });
 
