@@ -370,6 +370,7 @@ Included
 - `container scan` now also fails closed when `--out` overlaps `WEFTEND_ADAPTER_DISABLE_FILE` (`CONTAINER_SCAN_OUT_CONFLICTS_ADAPTER_POLICY_FILE`), preventing staged failure finalization from deleting adapter maintenance policy files.
 - `email safe-run` now fails closed when `--out` overlaps `--policy` (`EMAIL_SAFE_RUN_OUT_CONFLICTS_POLICY`), preventing safe-run staged finalize from deleting the email lane policy file.
 - `safe-run` now fails closed when `--out` overlaps `WEFTEND_ADAPTER_DISABLE_FILE` (`SAFE_RUN_OUT_CONFLICTS_ADAPTER_POLICY_FILE`), preventing staged-finalize cleanup from deleting adapter maintenance policy files.
+- `host run/install/update` now fail closed when `--out` overlaps the `releaseDir` (`HOST_OUT_CONFLICTS_RELEASE_DIR`), preventing receipt writes from mutating the release source being verified.
 - `safe-run`, `run`, and `examine` now fail closed when `--out` equals or overlaps the input path (`*_OUT_CONFLICTS_INPUT`), preventing staged-finalize cleanup from deleting or replacing the source input.
 - `email unpack` and `email safe-run` now also fail closed when `--out` equals or overlaps the input path, preventing staged-finalize cleanup from deleting or replacing source email inputs or normalized email exports.
 - `intake` now also fails closed when `--out` equals or overlaps the input path (`INTAKE_OUT_CONFLICTS_INPUT`), preventing staged-finalize cleanup from deleting or replacing the source input.
